[gd_scene load_steps=7 format=3 uid="uid://bd5jmibl2uhho"]

[ext_resource type="Texture2D" uid="uid://c10vb7vbiraux" path="res://Assets/StartMenu/cover.PNG" id="1_1lxxj"]
[ext_resource type="Script" path="res://Scenes/start.gd" id="1_lmkek"]
[ext_resource type="Texture2D" uid="uid://cm2l8x0ovobh2" path="res://Assets/StartMenu/start.png" id="2_37b1d"]
[ext_resource type="Script" uid="uid://bhsy11tyhx1oh" path="res://Scripts/buttons.gd" id="4_1lxxj"]
[ext_resource type="Texture2D" uid="uid://bel7a6vlvcrqu" path="res://Assets/StartMenu/setting.png" id="4_lmkek"]
[ext_resource type="Texture2D" uid="uid://dl5kyx4ifensm" path="res://Assets/StartMenu/leave.png" id="5_035le"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lmkek")

[node name="Cover" type="Sprite2D" parent="."]
position = Vector2(641, 360)
texture = ExtResource("1_1lxxj")

[node name="StartButton" type="TextureButton" parent="."]
offset_left = 189.0
offset_top = 398.0
offset_right = 555.0
offset_bottom = 522.0
texture_normal = ExtResource("2_37b1d")
script = ExtResource("4_1lxxj")

[node name="SettingButton" type="TextureButton" parent="."]
offset_left = 129.0
offset_top = 545.0
offset_right = 364.0
offset_bottom = 633.0
texture_normal = ExtResource("4_lmkek")
script = ExtResource("4_1lxxj")

[node name="ExitButton" type="TextureButton" parent="."]
offset_left = 369.0
offset_top = 544.0
offset_right = 595.0
offset_bottom = 637.0
texture_normal = ExtResource("5_035le")
script = ExtResource("4_1lxxj")

[connection signal="button_down" from="StartButton" to="StartButton" method="_on_button_down"]
[connection signal="button_down" from="SettingButton" to="SettingButton" method="_on_button_down"]
[connection signal="button_down" from="ExitButton" to="ExitButton" method="_on_button_down"]
